bugfix: disable horizontal on iOS

--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -1,11 +1,11 @@
-.menu-active {
-  .home-container {
-    left: 284px;
-  }
-  .bar-header {
-    left: 284px;
-  }
-}
+// .menu-active {
+//   .home-container {
+//     left: 284px;
+//   }
+//   .bar-header {
+//     left: 284px;
+//   }
+// }
 
 .bar-header {
   box-sizing: border-box;
